--- a/deepspeed_config.yaml
+++ b/deepspeed_config.yaml
@@ -1,8 +1,8 @@
 compute_environment: LOCAL_MACHINE
 debug: true
 deepspeed_config:
-  offload_optimizer_device: none
-  offload_param_device: none
+  offload_optimizer_device: cpu
+  offload_param_device: cpu
   zero3_init_flag: true
   zero3_save_16bit_model: true
   zero_stage: 3
