update README and docker-compose to streamline Docker container usage

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,6 @@
-version: '3.8'
-
 services:
   app:
-    build: . 
+    image: orfa:latest
     volumes:
       - ./:/workspace
     command: tail -f /dev/null
