--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,3 +4,10 @@ services:
     volumes:
       - ./:/workspace
     command: tail -f /dev/null
+    deploy:
+      resources:
+        reservations:
+          devices:
+            - driver: nvidia
+              count: all
+              capabilities: [gpu]
